# get-cc-chat

./: .gitignore  README.md  idea.txt  plan.md  pyproject.toml  requirements.txt
src/get_cc_chat/: __init__.py  cli.py  gist.py  renderer.py  session.py  template.html
tests/: test_cli.py  test_gist.py  test_renderer.py  test_session.py
