[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "get-cc-chat"
version = "0.1.0"
description = "Export Claude Code sessions as shareable HTML pages"
requires-python = ">=3.10"
dependencies = [
    "markdown>=3.5",
    "pygments>=2.17",
    "jinja2>=3.1",
]

[project.scripts]
get-cc-chat = "get_cc_chat.cli:main"
